Fix footer overflow

--- a/css/main.css
+++ b/css/main.css
@@ -42,14 +42,13 @@ html, body {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -200px;
+  margin: 0 auto -210px;
   /* Pad bottom by footer height */
-  padding: 0 0 200px;
+  padding: 0 0 210px;
 }
 .footer {
     height: 200px;
-    padding: 30px;
-    padding-bottom: 0;
+    padding: 30px 30px 0;
 }
 .footer-container {
 
